Refactor the whole OCHttpClient to use modern android http client